# discover-our-story-chat-backend

./: .coverage  .env  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
accounts/: api_urls.py
accounts/admin/: __init__.py  chatroom_admin.py  direct_message_admin.py  friendship_admin.py  message_admin.py  token_admin.py  user_admin.py
accounts/api/: chatroom_list.py  consumers.py  direct_messages.py  friendship_api.py  login_api.py  me.py  message_list.py  register_phone.py  token_refresh.py  users.py
accounts/factories/: user.py
accounts/migrations/: 0001_initial.py  0002_remove_user_social_avatar_hash.py  0003_user_avatar.py  0004_chatroom_message.py  0005_directmessage.py  0006_friendship.py
accounts/models/: __init__.py  chatroom.py  direct_message.py  friendship.py  message.py  user.py
accounts/serializers/: friendship.py
accounts/tests/api/: test_login_api.py
accounts/utils/: onesignal_utils.py
chatroom/: asgi.py  settings.py  urls.py
common/tests/: __init__.py  isolated_cache_test_case.py
github/workflows/: deploy-eks.yaml
k8s/: deployment.yaml  hpa.yaml  service.yaml
