[tool.poetry]
name = "chat-room"
version = "0.1.0"
description = "chat room"
authors = ["Tên Bạn <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
